<resources>
    <string name="app_name">My Application</string>
    <string name="title">WELCOME</string>
    <string name="title_vote">Vote</string>
    <string name="title_server">Server setup</string>
    <string name="title_printer">Printer setup</string>

    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>

    <string name="passcode_title">PLEASE ENTER YOUR PASSCODE</string>
    <string name="passcode_hint">passcode</string>
    <string name="passcode_start">START TO VOTE</string>

    <string name="voting_title">Please select one option</string>
    <string name="voting_hint">Touch to select</string>
    <string name="voting_audit">CANCEL</string>
    <string name="voting_confirm">CONFIRM</string>

    <string name ="thanks_title">THANK YOUR</string>
    <string name ="thanks_button">NEXT VOTER</string>


    <string name="main_title">PLEASE LOG IN TO START</string>
    <string name="main_enter">LOG IN</string>
    <string name="main_electionID">ELECTION ID</string>
    <string name="main_password">PASSWORD</string>
    <string name="main_serverAddress">SERVER ADDRESS</string>
    <string name="main_printerAddress">PRINTER ADDRESS</string>
    <string name="main_serverINFO">NONE</string>
    <string name="main_printerINFO">NONE</string>

    <string name="printer_search">Search</string>
    <string name="printer_test">Printer Sample</string>
    <string name="printer_printerlist">Printer List</string>

    <string name="server_title">ADD NEW SERVER</string>
    <string name="server_name">Name</string>
    <string name="server_nameHint">Alias</string>
    <string name="server_address">Address</string>
    <string name="server_addressHint">Please input full address of server</string>
    <string name="server_submit">SUBMIT</string>
    <string name="server_test">CONNECTION\n TEST</string>
    <string name="server_clear">CLEAR ALL</string>
    <string name="server_list">SERVER LIST</string>
    <string name="server_listInstruction">Touch to select</string>


    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>


</resources>
