<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true">

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="16dp">

                <TextView
                    android:id="@+id/server_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/server_title"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/server_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="@string/server_name"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/server_nameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/server_nameHint"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/colorPrimaryDark" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/server_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="@string/server_address"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/server_addressValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/server_addressHint"
                    android:inputType="textWebEmailAddress"
                    android:textColorHint="@color/colorPrimaryDark" />

            </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center">

            <Button
                android:id="@+id/server_submit"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/server_submit"
                android:textSize="17sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/server_connectionTest"
                android:layout_margin="10dp"
                android:padding="13dp"
                android:text="@string/server_test"
                android:textSize="17sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/space"
        android:layout_width="3dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:background="@android:color/darker_gray"
        android:text=" " />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/server_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="top|center"
                android:padding="16dp"
                android:text="@string/server_list"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/server_listInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/server_listInstruction"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Button
                android:id="@+id/server_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_clear" />

            <ListView
                android:id="@+id/server_listValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


</LinearLayout>
