<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical">

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_serverName"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/main_serverAddress"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/main_serverAddress"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/main_serverINFO"
            android:textAllCaps="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toTopOf="@+id/main_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/main_printerName"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/main_printerAddress"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/main_printerAddress"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/main_printerINFO"
            android:textAllCaps="true" />
    </TableRow>

    <TextView
        android:id="@+id/main_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorPrimary"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/vote_title"
        tools:layout_editor_absoluteX="38dp" />

    <TextView
        android:id="@+id/vote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="481dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="481dp"
        android:layout_marginBottom="96dp"
        android:text="@string/main_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/electionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/main_electionID"
        android:inputType="number"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vote_title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="378dp"
        android:layout_marginBottom="377dp"
        android:ems="10"
        android:hint="@string/main_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="570dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="569dp"
        android:layout_marginBottom="234dp"
        android:text="@string/main_enter"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />


</android.support.constraint.ConstraintLayout>